--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "xo": {
-    "prettier": true
+    "prettier": true,
+    "extends": "xo-vue",
+    "extensions": [
+      "js",
+      "vue"
+    ]
   },
   "scripts": {
     "dev": "vite",
@@ -16,6 +21,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "eslint-config-xo-vue": "^3.1.23",
+    "eslint-plugin-vue": "^6.2.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vue-tsc": "^1.0.0",
